--- a/css/phone.css
+++ b/css/phone.css
@@ -1,24 +1,105 @@
+/* Mobile and Tablet Styles */
+
+/* Navigation Bar */
 #navbar {
+    /* flex-wrap: wrap; */
     flex-direction: column;
+    overflow: auto;
 }
 
+#navbar ul {
+    /* flex-wrap: wrap; */
+}
+
+#navbar li {
+    /* padding: 10px; */
+    font-size: 1.2rem;
+}
+
+
+
+#navbar-btn {
+    display: block;
+    margin: 10px 0;
+}
+
+/* Section Home */
 #home-section {
-    height: 280px;
+    height: 100%;
+    /* padding: 3px 20px; */
 }
 
 #home-section::before {
-    height: 400px;
+    height: 300px;
+    /* padding: 3px 20px; */
 }
+
+#home-section p {
+    font-size: 0.75rem;
+}
+
+#home-section h2 {
+    font-size: 1rem;
+}
+
+/* Section Services */
 #services {
-    /* margin: 0px 34px; */
-    flex-direction: column;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
 }
 
 #services .box {
-    overflow: hidden;
+    width: 100%;
 }
 
-
+/* Section Clients */
 #clients {
-    overflow: hidden;
+    flex-wrap: wrap;
+    margin: 0px 10px;
+}
+
+#clients .box {
+    width: 100%;
+}
+
+/* Section About */
+#about {
+    flex-wrap: wrap;
+}
+
+#about .box {
+    width: 100%;
+}
+
+/* Section Contact */
+#contact {
+    flex-wrap: wrap;
+}
+
+#contact .box {
+    width: 100%;
+}
+
+#contact-about .box {
+    margin: 0px 5px;
+    width: 50%;
+    padding: 8px;
+    height: fit-content;
+}
+
+#contact-about-section {
+    margin: 10px 0px;
+}
+
+.h-primary {
+    font-size: 1.4rem;
+}
+
+.h-secondary {
+    font-size: 1rem;
+
+}
+
+.h-tertiary {
+    font-size: 0.6rem
 }
