--- a/css/phone.css
+++ b/css/phone.css
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
 }
 
-#navbar li {
+#navbar li a{
     /* padding: 10px; */
     font-size: 1rem;
 }
@@ -25,8 +25,7 @@
 #home-section {
     height: 100%;
     margin: 0px;
-    padding: 0px;
-    /* padding: 3px 20px; */
+    padding: 3px 20px;
 }
 
 #home-section::before {
@@ -72,24 +71,37 @@
 }
 
 /* Section Contact */
-#contact {
+#contact-about{
     flex-wrap: wrap;
 }
 
-#contact .box {
+/* #contact .box {
     width: 100%;
-}
+} */
 
 #contact-about .box {
     margin: 0px 5px;
-    width: 50%;
+    /* width: 50%; */
     padding: 8px;
     height: fit-content;
+    width: fit-content;
 }
 
 #contact-about-section {
     margin: 10px 0px;
 }
+
+
+/* .form-group label {
+    font-size: 1rem;
+}
+
+
+#contact-form input,
+#contact-form textarea {
+    font-size: 1rem;
+} */
+
 
 .h-primary {
     font-size: 1.4rem;
@@ -102,4 +114,8 @@
 
 .h-tertiary {
     font-size: 0.6rem
+}
+
+.btn {
+    font-size: 0.75rem;
 }
